feat: 优化工时管理功能和用户体验
- 新增批量工时填报对话框组件（WorkHourBatchDialog）
- Dashboard 页面优化：将待办任务和项目合并为 Tab 形式
- 工时日历优化：
  - 实现动态行计算（不再固定6行）
  - 添加颜色区分（当前月/周末/其他月）
  - 修复 userId 硬编码问题
- 工时列表修复：
  - 修复 userId 硬编码问题（使用当前登录用户）
  - 修复图标导入错误（Sum → Histogram）
- 后端修复：Java 8 兼容性问题（.toList() → .collect(Collectors.toList())）

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>